tools/tests/errors/surf_lib_19.ki
# base64.decode of an invalid character must raise.
var b = import("base64")
discard b.decode("####")
